--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,4 +1,5 @@
 /** Change styles **/
 
-
+$body-min-height :100%;
+$list-group-bg: $dark;
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
